--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <form id="form">
-    <input type="text" id="pseudo" placeholder="Pseudo" required>
+    <input type="text" id="Nom du joueur" placeholder="Nom du joueur" required>
     <input type="text" id="mission" placeholder="Mission" required>
     <input type="text" id="equipe1" placeholder="Equipe 1" required>
     <input type="text" id="equipe2" placeholder="Equipe 2" required>
@@ -69,7 +69,7 @@
 <table id="tableau">
     <thead>
         <tr>
-            <th>Pseudo</th>
+            <th>Nom du joueur</th>
             <th>Mission</th>
             <th>Equipe 1</th>
             <th>Equipe 2</th>
