--- a/index.html
+++ b/index.html
@@ -4,48 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau des Missions</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #000;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        form input {
-            margin-right: 10px;
-            padding: 5px;
-        }
-        form button {
-            padding: 5px 10px;
-        }
-        .edit-button, .save-button {
-            cursor: pointer;
-            color: blue;
-            text-decoration: underline;
-            background: none;
-            border: none;
-            padding: 0;
-        }
-        .search-container {
-            margin-bottom: 20px;
-        }
-        .search-container input {
-            padding: 5px;
-            margin-right: 10px;
-        }
-        .search-container button {
-            padding: 5px 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
