--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <tr>
             <th>Pseudo</th>
             <th>Mission</th>
-            <th>Equipe 1</th>
-            <th>Equipe 2</th>
-            <th>Equipe 3</th>
-            <th>Equipe 4</th>
+            <th>Equipe A</th>
+            <th>Equipe B</th>
+            <th>Equipe C</th>
+            <th>Equipe D</th>
             <th>Actions</th>
         </tr>
     </thead>
